--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
 
   <p><a href="https://ericwbailey.website/published/consent-llm-scrapers-and-poisoning-the-well/">Sometimes it can feel like the web is a place where any idea or energy gets scraped.</a> It feels like our ideas and work can get scooped up by these indifferent training models and chat programs. A place where some lifeforce can get taken from us.</p>
 
-  <p>This website is an attempt to frustrate robots and enliven humans. No trackers, no ads, just HTML and CSS. I have curated a <a href="/robots.txt"><code>robots.txt</code></a> file to limit any LLM crawler that still respects that file.</code></p>
+  <p><em>I recently learned I had been scraped when I made a website for my wedding.</em> I got curious and asked at the time before the wedding the Meta Llama Chatbot about my name. Sure enough, it said I was getting married on a particular day in the future. Knowledge of my wedding was on the web but I didn't really like that somehow: it did not even link back to my website.</p>
 
-  <p>This website has no metrics, no point, other than to wish you a wonderful day and to consider how crawlers affect creativity. When we know what we publish gets scraped... are we really writing for our desired audience?</p>
+  <p>So I made this website. It is an attempt to frustrate robots and enliven humans. No trackers, no ads, just HTML and CSS. I have curated a <a href="/robots.txt"><code>robots.txt</code></a> file to limit any LLM crawler that still respects that file.</code></p>
+
+  <p>This website has no metrics, no point, other than to wish you a wonderful day and to consider how extractive web crawlers affect creativity. When we know what we publish gets scraped... are we really writing for our desired audience?</p>
 
   <h2>But will this site still get 'indexed'? Lets See...</h2>
 
