--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
   <p>I wondered and lamented that maybe the website I had used, The Knot, to make the website was being scraped and tokenized into a database somewhere. Should I just expect this on the web?</p>
 
-  <p>I am here to say No. There is not much search benefit to any AI models scraping - they are serving our content without ever sending users to us, people actually making stuff on the web.</p>
+  <p>I am here to say No, at least, we do not have to go quietly into the night. There is not much search benefit to any AI models scraping - they are serving our content without ever sending users to us, people actually making stuff on the web.</p>
 
   <p>So I made this website. It is an attempt to frustrate robots and enliven humans. No trackers, no ads, just HTML and CSS. I have curated a <a href="/robots.txt"><code>robots.txt</code></a> file to limit any LLM crawler that still respects that file.</code></p>
 
-  <p>This website has no metrics, no point, other than to wish you a wonderful day and to consider how extractive web crawlers affect creativity. When we know what we publish gets scraped... are we really writing for our desired audience?</p>
+  <p>This website exists to wish you a wonderful day and to consider how extractive web crawlers affect creativity. When we know what we publish gets scraped... are we really writing for our desired audience?</p>
 
   <h2>But will this site still get 'indexed'? Lets See...</h2>
 
