--- a/index.html
+++ b/index.html
@@ -27,15 +27,13 @@
 
   <p><a href="https://ericwbailey.website/published/consent-llm-scrapers-and-poisoning-the-well/">Sometimes it can feel like the web is a place where any idea or energy gets scraped.</a> It feels like our ideas and work can get scooped up by indifferent and profit seeking training models and chat programs.</p>
 
-  <p><em>I recently learned I had been scraped when I made a website for my wedding.</em> I got curious and asked at the time before the wedding the Meta Llama Chatbot about my name. Sure enough, it said I was getting married on a particular day in the future that was correct and named my spouse too.</p>
+  <p><em>I recently learned I had been scraped when I made a website for my wedding.</em> I got curious and asked at the time before the wedding the Meta Llama Chatbot about my name. Sure enough, it said I was getting married on a particular day in the future that was correct and named my spouse too. Knowledge of my wedding was on the web but I didn't really like that somehow that Meta scraped and shared this: <strong>it did not even link back to my website.</strong></p>
   
-  <p>Knowledge of my wedding was on the web but I didn't really like that somehow that Meta knew and shared this: <strong>it did not even link back to my website.</strong></p>
-
-  <p>I wondered and lamented that maybe the website I had used, The Knot, to make the website was being scraped and tokenized into a database somewhere. Should I just expect this on the web?</p>
+  <p>I wondered and lamented that maybe the website I had used, The Knot, to make the website was being scraped and tokenized into a database somewhere. Should I just expect this on the web even when I make my own website?</p>
 
   <p>I am here to say No, at least, we do not have to go quietly into the night. There is not much search benefit to any AI models scraping - they are serving our content without ever sending users to us, people actually making stuff on the web.</p>
 
-  <p>So I made this website. It is an attempt to frustrate robots and enliven humans. No trackers, no ads, just HTML and CSS. I have curated a <a href="/robots.txt"><code>robots.txt</code></a> file to limit any LLM crawler that still respects that file.</code></p>
+  <p>So I made this website. It is an attempt to frustrate robots and enliven humans. No trackers, no ads, just HTML and CSS. I have curated a <a href="/robots.txt"><code>robots.txt</code></a> file to limit any bot crawler that still respects that file.</code></p>
 
   <p>This website exists to wish you a wonderful day and to consider how extractive web crawlers affect creativity. When we know what we publish gets scraped... are we really writing for our desired audience?</p>
 
